--- a/TempoAplicativo.Prism/TempoAplicativo.Prism.Android/TempoAplicativo.Prism.Android.csproj
+++ b/TempoAplicativo.Prism/TempoAplicativo.Prism.Android/TempoAplicativo.Prism.Android.csproj
@@ -199,5 +199,23 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\wind.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\WeatherPartlyCloudyRainicon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\addressbookicon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\homeicon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\Logouticon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\VeryBasicAbouticon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\VeryBasicMenuicon.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
