--- a/TempoAplicativo.Prism/TempoAplicativo.Prism.Android/TempoAplicativo.Prism.Android.csproj
+++ b/TempoAplicativo.Prism/TempoAplicativo.Prism.Android/TempoAplicativo.Prism.Android.csproj
@@ -217,5 +217,8 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\VeryBasicMenuicon.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\backg.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
